--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,7 @@
 <%= render @post %>
 Comments:
-  <% @post.comments.each do |comment| %>
-    <%= link_to comment.user.username, user_path(comment.user) %> said
-    <%= comment.content %>
+  <% @post.comments.collect{|comment| comment.user.username }.unique!.each do |user| %>
+    <%= link_to user.username, user_path(user) %>
   <% end %>
+
+  <%= form_for @post %>
