--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,23 @@
-<%= render @post %>
-Comments:
-  <% @post.comments.collect{|comment| comment.user.username }.unique!.each do |user| %>
-    <%= link_to user.username, user_path(user) %>
+<%= @post.title %>
+<%= @post.content %>
+<% @post.categories.each do |category| %>
+  <%= category.name %>
   <% end %>
 
-  <%= form_for @post %>
+Comments:
+<% @post.comments.each do |comment| %>
+    <%= comment.content %>
+    <% end %>
+
+Add a comment
+  <%= form_for @comment do |f|%>
+  <%= f.text_area :content %>
+  <%= f.hidden_field :post_id, :value => @post.id %>
+<label> Select or create new user </label>
+  <%= f.collection_select :user_id, User.all, :id, :username, include_blank: " "  %>
+  <%= f.fields_for :user,  @post.users.build do |user_fields| %>
+  <label>Username:</label>
+    <%= user_fields.text_field :username %>
+    <% end %>
+  <%= f.submit %>
+  <% end %>
