--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,8 +6,10 @@
 
 Comments:
 <% @post.comments.each do |comment| %>
+<%= comment.user.username %>says
     <%= comment.content %>
-    <% end %>
+  <% end %>
+
 
 Add a comment
   <%= form_for @comment do |f|%>
