--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,13 +6,17 @@
 
 Comments:
 <% @post.comments.each do |comment| %>
-
+<%= comment.user.username %> says:
     <%= comment.content %>
   <% end %>
 
+Unique Users
+<% @post.unique_users.each do |user| %>
+<%= link_to user.username, user_path(user) %>
+<% end %>
 
 Add a comment
-  <%= form_for @comment do |f|%>
+  <%= form_for @post.comments.build do |f|%>
   <%= f.text_area :content %>
   <%= f.hidden_field :post_id, :value => @post.id %>
 <label> Select or create new user </label>
